--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main>
         <section id="homepage">
             <div class="sect-cont">
-                <h1>TOURISM<br>GHANA<span>(The Gateway to the heart West Africa) </span></h1>
-                <p>Explore rich culture and history, Natural Wonders,<br> Wildlife and Adventure, Food and Music, Safety and Tips.<br>Come and discover the warm heart of Africa in Ghana</p>
+                <h1>TOURISM<br>GHANA<span>(The Gateway to the heart West Africa ) </span></h1>
+                <p>Explore rich culture and historical backgroun on Food <br>Come and discover the warm heart(food) of Africa in Ghana</p>
                 
             </div>
         </section> 
